--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   },
   "homepage": "https://github.com/krsamir/My-Buddy-backend#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "chalk": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
