--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.19.0"
+    "sequelize": "^6.19.0",
+    "yargs": "^17.5.1"
   },
   "devDependencies": {
     "eslint": "^8.14.0"
