--- a/package.json
+++ b/package.json
@@ -26,11 +26,16 @@
   "homepage": "https://github.com/krsamir/My-Buddy-backend#readme",
   "dependencies": {
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
     "chalk": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.5",
     "sequelize": "^6.19.0",
     "yargs": "^17.5.1"
   },
